--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
-    "from xgboost import XGBClassifier\n",
-    "\n"
+    "# write a \n",
+    "from sklearn.model_selection import train_test_split"
    ]
   }
  ],
